# pack-dev-tools

./: Cargo.toml  LICENSE  README.md  assets.json  bedrock.json  build-release.sh  clone-repos.sh  generate-ids.sh  generate-pack-bedrock.sh  generate-pack.sh  mkdir.sh  optimize-images.sh  rustfmt.toml  update-repos.sh
assets/: bedrock.json  java.json
macros/: Cargo.toml
macros/src/: include_sprite_sheet.rs
src/: lib.rs  pdthash.rs  pdtstruct.rs
src/lib/: Cargo.toml
src/lib/src/: blockify.rs  cauldron.rs  comparator.rs  dedupe.rs  json_fmt.rs  json_format.rs  lib.rs  observer.rs  optimize_images.rs  pdtcmd.rs  pdtcolor.rs  pdtfs.rs  pdthash.rs  pdtos.rs  pdtstdin.rs  pdtthread.rs  pdttrait.rs  release_builder.rs  texture_unstitch.rs  villager_infector.rs
src/love-and-tolerance-tools/blockify/: Cargo.toml
src/love-and-tolerance-tools/blockify/src/: main.rs
src/love-and-tolerance-tools/cauldron/: Cargo.toml
src/love-and-tolerance-tools/cauldron/src/: main.rs
src/love-and-tolerance-tools/release-builder/: Cargo.toml
src/love-and-tolerance-tools/release-builder/bash/: generate-pack-bedrock.sh
src/love-and-tolerance-tools/release-builder/src/: main.rs
src/love-and-tolerance-tools/release-builder/typescript/: .gitignore  package-lock.json
src/love-and-tolerance-tools/release-builder/typescript/src/: index.ts
src/love-and-tolerance-tools/villager-infector/: .gitignore  Cargo.toml  villager_infector.sh
src/love-and-tolerance-tools/villager-infector/src/: main.rs
src/tools/: Cargo.toml
src/tools/comparator/: Cargo.toml
src/tools/comparator/src/: main.rs
src/tools/dedupe/: .gitignore  Cargo.toml
src/tools/dedupe/src/: main.rs
src/tools/font-upscaler/: Cargo.toml
src/tools/font-upscaler-macro/: Cargo.toml
src/tools/font-upscaler-macro/src/: include_sprite_sheet.rs  lib.rs
src/tools/font-upscaler/src/: lib.rs  main.rs
src/tools/json-format/: Cargo.toml
src/tools/json-format/src/: main.rs
src/tools/json-formatters/: Cargo.toml  package-lock.json  package.json
src/tools/json-formatters/src/: json-fmt.ts  main.rs  mane.ts
src/tools/observer/: .gitignore  Cargo.toml  package-lock.json  package.json
src/tools/observer/src/: main.rs
src/tools/optimize-images/: Cargo.toml  package-lock.json
src/tools/optimize-images/src/: main.rs  mane.ts
src/tools/texture-unstitch/: Cargo.toml
src/tools/texture-unstitch/src/: main.rs
src/tools/texture-unstitcher/: Cargo.toml
src/tools/zip-dedupe/: package-lock.json
src/tools/zip-dedupe/src/: mane.ts
tools/auto-spritesheet-splitter/: README.md  split-spritesheet.sh
tools/community-skin-to-minelp-villager-skin/: community-skin-to-minelp-villager-skin.sh
tools/comparator /: package-lock.json  package.json
tools/comparator /src/: mane.ts
tools/json-formatters/: json-minify.ts
tools/json-formatters/src/: mane.ts
tools/observer/: package-lock.json  package.json
tools/observer/src/: mane.ts
tools/optimize-images/: package.json
tools/release-builder/bash/: .gitignore  clone-repos.sh  generate-ids.sh  generate-pack-bedrock.sh  generate-pack-java.sh  generate-pack.sh  optimize-images.sh
tools/release-builder/typescript/: package.json  tsconfig.json
tools/release-builder/typescript/src/: index.ts
tools/texture-unstitcher/: Cargo.toml
tools/texture-unstitcher/src/: main.rs
tools/zip-dedupe/bash/: dedupe.sh
tools/zip-dedupe/typescript/: package.json
tools/zip-dedupe/typescript/src/: mane.ts
