[profile.dev]
opt-level = 0
debug-assertions = true
debug = true
incremental = true

[profile.release]
strip = true
opt-level = 3
debug-assertions = false
lto = true
codegen-units = 1

[workspace]
members = [
	"src/lib",
    "src/tools/*",
    "src/love-and-tolerance-tools/blockify",
    "src/love-and-tolerance-tools/cauldron",
    "src/love-and-tolerance-tools/villager-infector"
]
