[package]
name = "pdt"
version = "0.1.0"
description = "CLI tools for resource pack management and development."
repository = "https://github.com/Love-and-Tolerance/pack-dev-tools"
authors = ["Silk Rose", "Meadowsys"]
edition = "2021"
license = "MIT"
publish = false

[dependencies]
atty = "0.2.14"
camino = "1.1.6"
clap = { version = "4.1.8", features = ["derive"] }
colors-transform = "0.2.11"
deltae = "0.3.0"
fs_extra = "1.3.0"
image = "0.24.7"
itertools = "0.11.0"
lab = "0.11.0"
num_cpus = "1.15.0"
oxipng = "8.0.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.155", features = ["derive"] }
sha2 = "0.10.6"
serde_json = { version = "1.0.94", features = ["preserve_order"] }
tokio = { version = "1.26.0", features = ["full"] }
pdt-macros = { path = "./macros" }

[workspace]
members = [
	"macros"
]

[profile.dev]
opt-level = 0
debug-assertions = true
debug = true
incremental = true

[profile.release]
strip = true
opt-level = 3
debug-assertions = false
lto = true
codegen-units = 1
