[package]
name = "pdt-macros"
description = "Proc macros for including compiletime data"
repository = "https://github.com/Love-and-Tolerance/pack-dev-tools"
version = "0.1.0"
authors = ["Silk Rose", "Meadowsys"]
license = "MIT"
edition = "2021"
publish = false

[dependencies]
ahash = "0.8.3"
image = "0.24.7"
itertools = "0.11.0"
proc-macro2 = "1.0.68"
quote = "1.0.33"
syn = "2.0.38"

[lib]
proc-macro = true
