[package]
name = "pdtlib"
description = "Function library for Pack Dev Tools."
repository = "https://github.com/Love-and-Tolerance/pack-dev-tools"
version = "0.1.0"
authors = ["Silk Rose", "Meadowsys"]
license = "MIT"
edition = "2021"
publish = false

[dependencies]
image = "0.24.5"
fs_extra = "1.3.0"
serde = "1.0.155"
serde_json = "1.0.94"
sha2 = "0.10.6"
digest = "0.10.6"
oxipng = "8.0.0"
lab = "0.11.0"
deltae = "0.3.0"
num_cpus = "1.15.0"
colors-transform = "0.2.11"
