[package]
name = "pdtlib"
description = "Function library for Pack Dev Tools."
repository = "https://github.com/Love-and-Tolerance/pack-dev-tools"
version = "0.1.0"
authors = ["Silk Rose", "Meadowsys"]
license = "MIT"
edition = "2021"
publish = false

[dependencies]
image = "0.24.5"
fs_extra = "1.3.0"
serde = { version = "1.0.155", features = ["derive"] }
serde_json = "1.0.94"
sha2 = "0.10.6"
digest = "0.10.6"
oxipng = "8.0.0"
lab = "0.11.0"
deltae = "0.3.0"
num_cpus = "1.15.0"
colors-transform = "0.2.11"
atty = "0.2.14"
camino = "1.1.4"
clap = { version = "4.1.8", features = ["derive"] }
tokio = { version = "1.26.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
