[package]
name = "comparator"
description = "CLI tools for resource pack management and development."
repository = "https://github.com/Love-and-Tolerance/pack-dev-tools"
version = "0.1.0"
authors = ["Silk Rose", "Meadowsys"]
license = "MIT"
edition = "2021"
publish = false

[dependencies]
pdtlib = { path = "../lib" }
image = "0.24.5"
serde = { version = "1.0.155", features = ["derive"] }
serde_json = { version = "1.0.94", features = ["preserve_order"] }
oxipng = "8.0.0"
deltae = "0.3.0"
colors-transform = "0.2.11"
camino = "1.1.4"
clap = { version = "4.1.8", features = ["derive"] }
tokio = { version = "1.26.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
