[package]
name = "villager-infector"
description = "CLI tool to convert MineLP skins into infected ponies from 28 Pranks Later."
repository = "https://github.com/Love-and-Tolerance/pack-dev-tools"
version = "0.1.0"
authors = ["Silk Rose", "Meadowsys"]
license = "MIT"
edition = "2021"
publish = false

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
pdtlib = { path = "../../lib" }
