[package]
name = "observer"
description = "CLI tool for generating changelogs."
repository = "https://github.com/Love-and-Tolerance/pack-dev-tools"
version = "0.1.0"
authors = ["Silk Rose", "Meadowsys"]
license = "MIT"
edition = "2021"
publish = false

[dependencies]
pdtlib = { path = "../../lib" }
