[package]
name = "optimize-images"
description = "CLI tool for optimizing png files."
repository = "https://github.com/Love-and-Tolerance/pack-dev-tools"
version = "0.1.0"
authors = ["Silk Rose", "Meadowsys"]
license = "MIT"
edition = "2021"
publish = false

[dependencies]
camino = "1.1.4"
clap ={ version = "4.1.8", features = ["derive"] }
pdtlib = { path = "../../lib" }
