[package]
name = "texture-unstitch"
description = "CLI tool to unstitch spritemaps."
repository = "https://github.com/Love-and-Tolerance/pack-dev-tools"
version = "0.1.0"
authors = ["Silk Rose", "Meadowsys"]
license = "MIT"
edition = "2021"
publish = false

[dependencies]
pdtlib = { path = "../../lib" }
image = "0.24.5"
